--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
+
 * {
   margin: 0;
   padding: 0;
@@ -12,48 +13,47 @@ body {
   max-width: 100%;
   overflow-x: hidden;
 }
-
-#yerassylphoto img {
-  width: 20%; /* Adjust as needed */
+#yerassylphoto img{
+  width: 700px;
   position: absolute;
-  transform: translate(0, -1em); /* Adjust as needed */
+  transform: translate(0, -34px);
 }
-
 .overall-introduction {
-  width: 30%; /* Adjust as needed */
-  height: 20%; /* Adjust as needed */
-  margin-bottom: 15%; /* Adjust as needed */
+  width: 300px; 
+  height: 200px;
+  margin-bottom: 350px;
 }
-
 #yerass {
-  font-size: 3em; /* Adjust as needed */
+  font-size: 50px;
   font-weight: 800;
 }
-
 #yerass2 {
   font-weight: 600;
 }
 
+
 .overall-introduction img {
   position: relative;
-  width: 80%; /* Adjust as needed */
-  height: auto;
-  object-fit: cover;
+  width: 1500px;
+  height: 525px;
+  object-fit: cover; 
   margin-right: 0%;
-  transform: translate(10%, -1em); /* Adjust as needed */
+  transform: translate(43%, -34px);
 }
+
 
 .main-info-yerass {
   position: absolute;
   width: 100%;
   height: 100%;
-  color: black;
-  text-align: center;
-  font-size: 2em; /* Adjust as needed */
-  transform: translate(20%, -20%); /* Adjust as needed */
+  color: black; 
+  text-align: center; 
+  font-size: auto;
+  transform: translate(350px, -350px);
+
 }
 
-.welcome-img img {
+.welcome-img img{
   width: 100%;
 }
 
@@ -65,14 +65,14 @@ body {
 
 .welcome h2 {
   color: #fff;
-  font-size: 8em; /* Adjust as needed */
+  font-size: 8em;
   position: absolute;
   transform: translate(-50%, -50%);
 }
 
 .welcome h2:nth-child(1) {
   color: transparent;
-  -webkit-text-stroke: 0.1em black; /* Adjust as needed */
+  -webkit-text-stroke: 2px black;
 }
 
 .welcome h2:nth-child(2) {
@@ -111,21 +111,35 @@ body {
   }
 }
 
+
 .description1 {
-  display: flex;
-  color: black;
-  justify-content: center;
-  font-size: 1.5em; /* Adjust as needed */
-  transform: translateY(-1em); /* Adjust as needed */
+    display: flex;
+    color:black ;
+    justify-content: center;
+    font-size: larger;
+    transform: translateY(-70px);
+    margin: 0%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 article {
   --img-scale: 1.001;
   --title-color: black;
-  --link-icon-translate: -0.5em; /* Adjust as needed */
+  --link-icon-translate: -20px;
   --link-icon-opacity: 0;
   position: relative;
-  border-radius: 1em; /* Adjust as needed */
+  border-radius: 16px;
   box-shadow: none;
   background: #fff;
   transform-origin: center;
@@ -142,10 +156,10 @@ article a::after {
 }
 
 article h2 {
-  margin: 0 0 1em 0; /* Adjust as needed */
+  margin: 0 0 18px 0;
   font-family: "Bebas Neue", cursive;
-  font-size: 1.5em; /* Adjust as needed */
-  letter-spacing: 0.02em; /* Adjust as needed */
+  font-size: 1.9rem;
+  letter-spacing: 0.06em;
   color: var(--title-color);
   transition: color 0.3s ease-out;
 }
@@ -164,7 +178,7 @@ article img {
 }
 
 .article-body {
-  padding: 1em; /* Adjust as needed */
+  padding: 24px;
 }
 
 article a {
@@ -175,14 +189,14 @@ article a {
 }
 
 article a:focus {
-  outline: 0.1em dotted #28666e; /* Adjust as needed */
+  outline: 1px dotted #28666e;
 }
 
 article a .icon {
-  min-width: 1em; /* Adjust as needed */
-  width: 1em; /* Adjust as needed */
-  height: 1em; /* Adjust as needed */
-  margin-left: 0.2em; /* Adjust as needed */
+  min-width: 24px;
+  width: 24px;
+  height: 24px;
+  margin-left: 5px;
   transform: translateX(var(--link-icon-translate));
   opacity: var(--link-icon-opacity);
   transition: all 0.3s;
@@ -193,24 +207,27 @@ article:has(:hover, :focus) {
   --title-color: #28666e;
   --link-icon-translate: 0;
   --link-icon-opacity: 1;
-  box-shadow: rgba(0, 0, 0, 0.16) 0 1em 3.6em 0, rgba(0, 0, 0, 0.06) 0 0 0 0.1em;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
+
 
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
+
 .articles {
   display: grid;
   max-width: 1200px;
   margin-inline: auto;
-  padding-inline: 1em; /* Adjust as needed */
-  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr)); /* Adjust as needed */
-  gap: 1em; /* Adjust as needed */
+  padding-inline: 24px;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 24px;
+
 }
 
-@media screen and (max-width: 60em) {
+@media screen and (max-width: 960px) {
   article {
     container: card/inline-size;
   }
@@ -219,11 +236,47 @@ article:has(:hover, :focus) {
   }
 }
 
-@counter-style card (min-width: 23.75em) {
+@counter-style card (min-width: 380px) {
   .article-wrapper {
     display: grid;
-    grid-template-columns: 5em 1fr; /* Adjust as needed */
-    gap: 0.8em; }}
+    grid-template-columns: 100px 1fr;
+    gap: 16px;
+  }
+  .article-body {
+    padding-left: 0;
+  }
+  figure {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  figure img {
+    height: 100%;
+    object-fit: cover;
+  }
+}
 
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+
+#article5 {
+  position: relative;
+  left: 200px;
+  margin-top: 24px;
+}
+
+#article4 {
+  position: relative;
+  left: 200px;
+  margin-top: 24px;
+}
 
 
