--- a/school.css
+++ b/school.css
@@ -77,3 +77,45 @@
     transform: translateY(-70px);
     margin: 0%;
 }
+
+.wrapper{
+  position: relative;
+  clear:both;
+  margin: 0px auto 0px auto;
+  width: 100%;
+  overflow: hidden;
+}
+.content{
+  padding-bottom: 20px;
+}
+.card{
+  position: relative;
+  background: #e0fbfc;
+  padding:50px;
+  width: 600px;
+  margin: 20px auto 0 auto;
+  box-shadow: 0 2px 4px rgba(100,100,100,.1);
+}
+
+.card h2 {
+  font-size:21px;
+  font-weight:500;
+}
+
+.card h2 a {
+  color:#03a9f4;
+  text-decoration:none;
+}
+
+.card .date {
+  color:#9e9e9e;
+  margin-top:10px;
+  font-size:14px;
+}
+
+.card .text {
+  color:#212121;
+  margin-top:20px;
+  font-size:15px;
+  line-height:22px;
+}
