--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,17 @@ body {
   overflow-x: hidden;
 }
 #yerassylphoto img{
-  width: 700px;
+  width: 43.75em;
   position: absolute;
   transform: translate(0, -34px);
 }
 .overall-introduction {
-  width: 300px; 
-  height: 200px;
-  margin-bottom: 350px;
+  width: 18.75em; 
+  height: 12.5em;
+  margin-bottom: 21.875em;
 }
 #yerass {
-  font-size: 50px;
+  font-size: 3.125em;
   font-weight: 800;
 }
 #yerass2 {
@@ -34,11 +34,11 @@ body {
 
 .overall-introduction img {
   position: relative;
-  width: 1500px;
-  height: 525px;
+  width: 93.75em;
+  height: 32.8125em;
   object-fit: cover; 
   margin-right: 0%;
-  transform: translate(43%, -34px);
+  transform: translate(43%, -2.125em);
 }
 
 
@@ -49,7 +49,7 @@ body {
   color: black; 
   text-align: center; 
   font-size: auto;
-  transform: translate(350px, -350px);
+  transform: translate(21.875em, -21.875em);
 
 }
 
@@ -117,7 +117,7 @@ body {
     color:black ;
     justify-content: center;
     font-size: larger;
-    transform: translateY(-70px);
+    transform: translateY(-4.375em);
     margin: 0%;
 }
 
@@ -136,10 +136,10 @@ body {
 article {
   --img-scale: 1.001;
   --title-color: black;
-  --link-icon-translate: -20px;
+  --link-icon-translate: -1.25em;
   --link-icon-opacity: 0;
   position: relative;
-  border-radius: 16px;
+  border-radius: 1em;
   box-shadow: none;
   background: #fff;
   transform-origin: center;
@@ -156,7 +156,7 @@ article a::after {
 }
 
 article h2 {
-  margin: 0 0 18px 0;
+  margin: 0 0 1.125em 0;
   font-family: "Bebas Neue", cursive;
   font-size: 1.9rem;
   letter-spacing: 0.06em;
@@ -178,7 +178,7 @@ article img {
 }
 
 .article-body {
-  padding: 24px;
+  padding: 1.5em;
 }
 
 article a {
@@ -193,10 +193,10 @@ article a:focus {
 }
 
 article a .icon {
-  min-width: 24px;
-  width: 24px;
-  height: 24px;
-  margin-left: 5px;
+  min-width: 1.5em;
+  width: 1.5em;
+  height: 1.5em;
+  margin-left: 0.3125em;
   transform: translateX(var(--link-icon-translate));
   opacity: var(--link-icon-opacity);
   transition: all 0.3s;
@@ -219,10 +219,10 @@ article:has(:hover, :focus) {
 
 .articles {
   display: grid;
-  max-width: 1200px;
+  max-width: 75em;
   margin-inline: auto;
   padding-inline: 24px;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
   gap: 24px;
 
 }
@@ -239,8 +239,8 @@ article:has(:hover, :focus) {
 @counter-style card (min-width: 380px) {
   .article-wrapper {
     display: grid;
-    grid-template-columns: 100px 1fr;
-    gap: 16px;
+    grid-template-columns: 6.25em 1fr;
+    gap: 1em;
   }
   .article-body {
     padding-left: 0;
@@ -260,23 +260,23 @@ article:has(:hover, :focus) {
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0); 
   clip-path: inset(50%);
-  height: 1px;
+  height: 0.0625em;
   overflow: hidden;
   position: absolute;
   white-space: nowrap; 
-  width: 1px;
+  width: 0.0625em;
 }
 
 #article5 {
   position: relative;
-  left: 200px;
-  margin-top: 24px;
+  left: 12.5em;
+  margin-top: 1.5em;
 }
 
 #article4 {
   position: relative;
-  left: 200px;
-  margin-top: 24px;
+  left: 12.5em;
+  margin-top: 1.5em;
 }
 
 
