--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,12 @@ article:has(:hover, :focus) {
   }
 }
 
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
 @counter-style card (min-width: 380px) {
   .article-wrapper {
     display: grid;
