--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   color: black; 
   text-align: center; 
   font-size: auto;
-  transform: translate(21.875em, -21.875em);
+  transform: translate(25%, -50%);
 
 }
 
@@ -65,7 +65,7 @@ body {
 
 .welcome h2 {
   color: #fff;
-  font-size: 8em;
+  font-size: 800%;
   position: absolute;
   transform: translate(-50%, -50%);
 }
@@ -117,7 +117,7 @@ body {
     color:black ;
     justify-content: center;
     font-size: larger;
-    transform: translateY(-4.375em);
+    transform: translateY(-250%);
     margin: 0%;
 }
 
