--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ article img {
 }
 
 .article-body {
-  padding: 1.5em;
+  padding: 10%;
 }
 
 article a {
@@ -221,9 +221,9 @@ article:has(:hover, :focus) {
   display: grid;
   max-width: 75em;
   margin-inline: auto;
-  padding-inline: 24px;
+  padding-inline: 1%;
   grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
-  gap: 24px;
+  gap: 1%;
 
 }
 
@@ -275,13 +275,13 @@ article:has(:hover, :focus) {
 
 #article5 {
   position: relative;
-  left: 12.5em;
+  left: 52%;
   margin-top: 1.5em;
 }
 
 #article4 {
   position: relative;
-  left: 12.5em;
+  left: 52%;
   margin-top: 1.5em;
 }
 
