--- a/school.css
+++ b/school.css
@@ -18,13 +18,14 @@
   
   .welcome {
     position: absolute;
-    top: 10%;
     left: 50%;
+    margin-bottom: 10%;
+    transform: translate(0, -2em);
   }
   
   .welcome h2 {
     color: #fff;
-    font-size: 8em;
+    font-size: 400%;
     position: absolute;
     transform: translate(-50%, -50%);
   }
@@ -69,15 +70,6 @@
       );
     }
   }
-  .description1 {
-    display: flex;
-    color:#03a9f4 ;
-    justify-content: center;
-    font-size: large;
-    transform: translateY(-70px);
-    margin: 0%;
-}
-
 .wrapper{
   position: relative;
   clear:both;
@@ -92,7 +84,7 @@
   position: relative;
   background: #e0fbfc;
   padding:50px;
-  width: 600px;
+  width: 100%;
   margin: 20px auto 0 auto;
   box-shadow: 0 2px 4px rgba(100,100,100,.1);
 }
