--- a/books.css
+++ b/books.css
@@ -19,13 +19,14 @@
   
   .welcome {
     position: absolute;
-    top: 10%;
     left: 50%;
+    margin-bottom: 10%;
+    transform: translate(0, -2em);
   }
   
   .welcome h2 {
     color: #fff;
-    font-size: 8em;
+    font-size: 400%;
     position: absolute;
     transform: translate(-50%, -50%);
   }
@@ -81,19 +82,6 @@
     right: 100px;
 
   }
-  .description1 {
-      display: flex;
-      color:#5B0888 ;
-      justify-content: center;
-      font-size: medium;
-      transform: translateY(-70px);
-      margin: 0%;
-  }
-
-
-
-
-
 
 
 
@@ -130,6 +118,7 @@
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   text-align: center;
+  font-size: 50%;
 }
 
 .book-container:hover {
