--- a/hobbyandinterest.css
+++ b/hobbyandinterest.css
@@ -7,7 +7,7 @@
   }
   
   body {
-    background: #293241;
+    background: #324968;
     max-width: 100%;
     box-sizing: border-box;
     overflow-x: hidden;
@@ -18,12 +18,17 @@
   }
   
   .welcome {
-    transform: translate(19%, -200px);
+    position: absolute;
+    left: 50%;
+    margin-bottom: 10%;
+    transform: translate(0, -2em);
   }
   
   .welcome h2 {
     color: #fff;
-    font-size: 100px;
+    font-size: 400%;
+    position: absolute;
+    transform: translate(-50%, -50%);
   }
   
   .welcome h2:nth-child(1) {
@@ -34,7 +39,6 @@
   .welcome h2:nth-child(2) {
     color: #ffab14;
     animation: animate 4s ease-in-out infinite;
-    transform: translateY(-150px);
   }
   
   @keyframes animate {
@@ -67,184 +71,98 @@
       );
     }
   }
-  .description1 {
-    color:#ffab14 ;
-    font-size: larger;
-    transform: translate(23%,-360px);
-}
 
 
-.projcard-container,
-.projcard-container * {
-  box-sizing: border-box;
-}
-.projcard-container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1000px;
-  transform: translate(0px, -300px);
-  height: 0px;
-}
-.projcard {
-  position: relative;
-  width: 100%;
-  height: 300px;
-  margin-bottom: 40px;
-  border-radius: 10px;
-  background-color: #fff;
-  border: 2px solid #ddd;
-  font-size: 18px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 0 4px 21px -12px rgba(0, 0, 0, .66);
-  transition: box-shadow 0.2s ease, transform 0.2s ease;
-}
-.projcard:hover {
-  box-shadow: 0 34px 32px -33px rgba(0, 0, 0, .18);
-  transform: translate(0px, -3px);
-}
-.projcard::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: linear-gradient(-70deg, #424242, transparent 50%);
-  opacity: 0.07;
-}
-.projcard:nth-child(2n)::before {
-  background-image: linear-gradient(-250deg, #424242, transparent 50%);
-}
-.projcard-innerbox {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.projcard-img {
-  position: absolute;
-  height: 300px;
-  width: 400px;
-  top: 0;
-  left: 0;
-  transition: transform 0.2s ease;
-}
-.projcard:nth-child(2n) .projcard-img {
-  left: initial;
-  right: 0;
-}
-.projcard:hover .projcard-img {
-  transform: scale(1.05) rotate(1deg);
-}
-.projcard:hover .projcard-bar {
-  width: 70px;
-}
-.projcard-textbox {
-  position: absolute;
-  top: 7%;
-  bottom: 7%;
-  left: 430px;
-  width: calc(100% - 470px);
-  font-size: 17px;
-}
-.projcard:nth-child(2n) .projcard-textbox {
-  left: initial;
-  right: 430px;
-}
-.projcard-textbox::before,
-.projcard-textbox::after {
-  content: "";
-  position: absolute;
-  display: block;
-  background: #ff0000bb;
-  background: #fff;
-  top: -20%;
-  left: -55px;
-  height: 140%;
-  width: 60px;
-  transform: rotate(8deg);
-}
-.projcard:nth-child(2n) .projcard-textbox::before {
-  display: none;
-}
-.projcard-textbox::after {
-  display: none;
-  left: initial;
-  right: -55px;
-}
-.projcard:nth-child(2n) .projcard-textbox::after {
-  display: block;
-}
-.projcard-textbox * {
-  position: relative;
-}
-.projcard-title {
-  font-family: 'Voces', 'Open Sans', arial, sans-serif;
-  font-size: 24px;
-}
-.projcard-subtitle {
-  font-family: 'Voces', 'Open Sans', arial, sans-serif;
-  color: #888;
-}
-.projcard-bar {
-  left: -2px;
-  width: 50px;
-  height: 5px;
-  margin: 10px 0;
-  border-radius: 5px;
-  background-color: #424242;
-  transition: width 0.2s ease;
-}
-.projcard-blue .projcard-bar { background-color: #ffab14; }
-.projcard-blue::before { background-image: linear-gradient(-70deg, #ffab14, transparent 50%); }
-.projcard-blue:nth-child(2n)::before { background-image: linear-gradient(-250deg, #ffab14, transparent 50%); }
-.projcard-description {
-    z-index: 10;
-    font-size: 15px;
-    color: #424242;
+
+  .main {
+    margin: 0 auto;
+  }
+  
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    max-width: max-content;
+  }
+  
+  .cards_item {
+    display: flex;
+    padding: 1rem;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .card_image img {
+    max-height: 250px;
+    margin-top: -24px;
+    width: 100%;
+    max-width: 800px;
+    height: 100%;
+    object-fit: cover;
+
+    
+      after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100px;
+      position: relative;
+      top: -100px;
+      background: linear-gradient(0deg, #091014 10%, rgba(0, 0, 0, 0) 100%);
+    }
+  }
+  
+  .card {
+    background-color: #091014;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
-    text-overflow: ellipsis;
   }
-  .projcard-tagbox {
-    position: absolute;
-    bottom: 3%;
-    font-size: 14px;
-    cursor: default;
-    user-select: none;
-    pointer-events: none;
+  
+  .card_content {
+    padding: 1rem;
+    z-index: 1;
+    display: block;
   }
-  .projcard-tag {
-    display: inline-block;
-    background: #E0E0E0;
-    color: #777;
-    border-radius: 3px 0 0 3px;
-    line-height: 26px;
-    padding: 0 10px 0 23px;
+  
+  .card_title {
+    font-family: 'Lobster', cursive;
+    font-size: 72px;
+    line-height: 72px;
+    margin-top: -50px;
+    margin-bottom: 24px;
+    text-shadow: black 1px 0 15px;
+    color: white;
+  }
+  
+  .card_text {
+    color: #DDDACB;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    
+    p {
+      max-width: 700px;
+    }
+  }
+
+  .card_price {
     position: relative;
-    margin-right: 20px;
-    cursor: default;
-    user-select: none;
-    transition: color 0.2s;
-  }
-  .projcard-tag::before {
-    content: '';
-    position: absolute;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-    height: 6px;
-    left: 10px;
-    width: 6px;
     top: 10px;
+    right: 16px;
+    text-align: right;
+    color: white;
+    font-family: "Raleway", sans-serif;
+    height: 24px;
+    font-size: 36px;
+    font-weight: 400;
+    text-shadow: black 3px 0px 6px;
   }
-  .projcard-tag::after {
-    content: '';
-    position: absolute;
-    border-bottom: 13px solid transparent;
-    border-left: 10px solid #E0E0E0;
-    border-top: 13px solid transparent;
-    right: -10px;
-    top: 0;
-  }
+
+
+
+
+  
