--- a/improvement.css
+++ b/improvement.css
@@ -18,16 +18,18 @@
   
   .welcome {
     position: absolute;
-    top: 10%;
     left: 50%;
+    margin-bottom: 10%;
+    transform: translate(0, -2em);
   }
   
   .welcome h2 {
     color: #fff;
-    font-size: 8em;
+    font-size: 300%;
     position: absolute;
     transform: translate(-50%, -50%);
   }
+  
   
   .welcome h2:nth-child(1) {
     color: transparent;
@@ -69,15 +71,6 @@
       );
     }
   }
-  .description1 {
-    display: flex;
-    color:red ;
-    justify-content: center;
-    font-size: medium;
-    transform: translateY(-70px);
-    margin: 0%;
-}
- 
  .wrapper{
     position: relative;
     clear:both;
@@ -92,7 +85,7 @@
     position: relative;
     background: #fff5e0;
     padding:50px;
-    width: 600px;
+    width: 100%;
     margin: 20px auto 0 auto;
     box-shadow: 0 2px 4px rgba(100,100,100,.1);
   }
